            - replaced manual count of lines on "log_handler()" by "ctrl:GetNumberOfLines()"
            - changed "log_handler()" replaced "tmp_file.txt" logic with simple "parent:LoadFile()"
            - added "timer" to update "logfile_window" if logfile is displayed
            - changed "log_window" width from 250 to 300
        - global:
            - changed code style to fit code standard
            - changed "need_save" to object and track changes for Tab 1 + Tab 2 + Tab 3
            - renamed button "save_hub_cfg" to "save_hub"
            - renamed button "save_button" to "save_rules"
            - extended "table" object which contain all table methods
            - added "validate" object which contain all validator methods
            - added "dialog" object which contain all validator methods
            - added "wxEVT_COMMAND_TEXT_UPDATED" Events for Tab 1 + Tab 2 + Tab 
            - added param page to "disable_save_buttons()" + "save_changes()" + "undo_changes()"
            - replaced all custom checks and validations with "validate.cert()" / "validate.hub()" / "validate.cfg()" / "validate.rules()" / "validate.unique_name()" / "validate.active_rule()"
            - replaced all custom table methods with "table.hasValue()" / "table.hasKey()" / "table.getKey()" / "table.copy()"
            - added "parse_listbox_selection()" to get nr and name of listbox selection
            - fixed known issue on rules_listbox + categories_listbox with selection id and array id
            - changed save buttons callback manual save functions with save_changes( page )
            - added validation of important rule values
            - replaced "listbox:GetSelection()" with "parse_listbox_selection( listbox )"
            - added "need_save.rules" + "unique_name" + "active_rule" to return of "validate.rules()"
            - removed "HandleEvents" event from "HandleChangeTab" events
            - removed event "wxEVT_CLOSE_WINDOW" from add_taskbar